--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical|center_horizontal"
@@ -26,7 +27,7 @@
             android:src="@drawable/logo"/>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/mobile"
+            android:id="@+id/user_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -42,7 +43,8 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
 
             <EditText
                 android:layout_width="match_parent"
