--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="loginBackground">#9AB526</color>
     <color name="black">#000000</color>
+
+    <color name="textBackground1">#9AB526</color>
+    <color name="textBackground2">#FF89E223</color>
 </resources>
