--- a/app/src/main/res/layout/activity_performance_details.xml
+++ b/app/src/main/res/layout/activity_performance_details.xml
@@ -4,10 +4,19 @@
     android:id="@+id/activity_performanc_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kandarp.mygurukul.PerformanceDetails">
 
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="*"
+            android:background="@drawable/border"
+            android:id="@+id/table">
+        </TableLayout>
+    </HorizontalScrollView>
 </RelativeLayout>
