--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,105 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawerlayout"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/loginBackground">
-
-        <include
-            layout="@layout/navigation_action"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
 
         <RelativeLayout
-            android:layout_below="@+id/nav_action"
+            android:id="@+id/activity_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@color/textBackground1">
 
-<!--            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/header_logo" />-->
-
-            <ViewFlipper
-                android:id="@+id/viewF"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView"
-                android:layout_margin="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte1" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte2" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte3" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte4" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte5" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/nitte6" />
-            </ViewFlipper>
+            <include
+                layout="@layout/navigation_action"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
-            <GridView
-                android:id="@+id/gridview"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:numColumns="2"
-                android:verticalSpacing="16dp" />
+                android:layout_below="@+id/nav_action"
+                android:orientation="vertical">
+
+                <!--            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="100dp"
+                                android:layout_alignParentTop="true"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="0dp"
+                                android:src="@drawable/header_logo" />-->
+
+                <ViewFlipper
+                    android:id="@+id/viewF"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/imageView"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte1" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte2" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte3" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte4" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte5" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:gravity="center"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/nitte6" />
+                </ViewFlipper>
+
+                <TextView
+                    android:id="@+id/usnText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/viewF"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/border_home"
+                    android:padding="10dip"
+                    android:textColor="#000000"
+                    android:textSize="15dip"
+                    android:textStyle="bold"
+                    android:typeface="monospace" />
+
+                <GridView
+                    android:id="@+id/gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:numColumns="2"
+                    android:layout_below="@+id/usnText"
+                    android:verticalSpacing="16dp" />
+            </RelativeLayout>
+
         </RelativeLayout>
 
-    </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_header"
-        app:menu="@menu/navigation_menu">
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+</ScrollView>
