--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -16,6 +16,7 @@
             android:scrollbars="none">
 
 
+
             <TableLayout
                 android:id="@+id/table"
                 android:layout_width="match_parent"
@@ -23,10 +24,36 @@
                 android:layout_gravity="bottom"
                 android:stretchColumns="*">
 
-                <ImageView
+               <!-- <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:paddingTop="20dp"
+                    android:text="My Profile"
+                    android:textColor="#000000"
+                    android:textSize="20dip"
+                    android:textStyle="bold"
+                    android:drawableLeft="@mipmap/ic_launcher"
+                    android:drawablePadding="3dp"
+                    android:background="@drawable/border_header"
+                    android:typeface="monospace" />
+-->
+
+                <include
+                    layout="@layout/toolbar_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     />
+
+
+                <TableRow>
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/grid_view_image_background_shape"
+                        android:id="@+id/proPic" />
+                </TableRow>
             </TableLayout>
 
         </HorizontalScrollView>
