--- a/app/src/main/res/layout/menu_grid_view.xml
+++ b/app/src/main/res/layout/menu_grid_view.xml
@@ -19,6 +19,10 @@
         android:id="@+id/textView"
         android:layout_below="@+id/imageView"
         android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="10dip"
+        android:textStyle="bold"
+        android:typeface="monospace"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"/>
 </LinearLayout>
