--- a/app/src/main/res/layout/toolbar_time_table.xml
+++ b/app/src/main/res/layout/toolbar_time_table.xml
@@ -4,8 +4,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/nav_action"
     android:background="@color/loginBackground">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Time Table"
+        android:padding="10dip"
+        android:textColor="#000000"
+        android:textSize="20dip"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        />
 
 </android.support.v7.widget.Toolbar>
